# mdpc-gf-p

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  main.plist  random.plist
docs/: Doxyfile  api.md
docs/html/: annotated.html  classCode-members.html  classCode.html  classProtocol-members.html  classProtocol.html  classRandom-members.html  classRandom.html  classes.html  code_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  protocol_8hpp_source.html  random_8hpp_source.html  structDecodeBounds-members.html  structDecodeBounds.html  utils_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
docs/latex/: annotated.tex  classCode.tex  classProtocol.tex  classRandom.tex  refman.tex  structDecodeBounds.tex
docs/xml/: classCode.xml  classProtocol.xml  classRandom.xml  code_8hpp.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  protocol_8hpp.xml  random_8hpp.xml  structDecodeBounds.xml  utils_8hpp.xml
include/: code.hpp  codeparams.hpp  protocol.hpp  random.hpp  utils.hpp
src/: code.cpp  main.cpp  protocol.cpp  random.cpp  utils.cpp
src/code/: code.cpp  code.hpp
src/protocol/: protocol.cpp  protocol.hpp
